// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Article List Item items should render without margin 1`] = `
<DocumentFragment>
  <div
    class="css-niwyl0"
  >
    <div
      class="css-1kwj960"
    >
      <picture
        class="css-l4lngz"
      >
        <img
          alt="This is ALT Text"
          class="css-ssxt4f"
          loading="lazy"
        />
      </picture>
    </div>
    <div
      class="css-17cghxi"
    >
      <a
        class="css-bxykrz"
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
        role="link"
      >
        <span
          class="css-17x5lw"
        >
          <span
            class="css-65zrxz"
          >
            Harry & Meghan's New Project?
          </span>
        </span>
      </a>
      <div
        class="css-1atazsr"
        data-testid="tag-and-flag"
      >
        <a
          class="css-10d4t8c"
          href="/"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-1jxv40d"
            >
              Review
            </span>
          </span>
        </a>
        <div
          class="css-lew009"
        >
          <hr
            aria-hidden="true"
            class="css-15kf7hd"
            data-testid="divider"
          />
        </div>
        <span
          class="css-d9hjcx"
        >
          4 min read
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Article List Item should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1nw1nne"
  >
    <div
      class="css-1kwj960"
    >
      <picture
        class="css-l4lngz"
      >
        <img
          alt="This is ALT Text"
          class="css-ssxt4f"
          loading="lazy"
        />
      </picture>
    </div>
    <div
      class="css-17cghxi"
    >
      <a
        class="css-u57k3c"
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
        role="link"
      >
        <span
          class="css-17x5lw"
        >
          <span
            class="css-65zrxz"
          >
            Harry & Meghan's New Project?
          </span>
        </span>
      </a>
      <div
        class="css-1atazsr"
        data-testid="tag-and-flag"
      >
        <a
          class="css-10d4t8c"
          href="/"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-1jxv40d"
            >
              Review
            </span>
          </span>
        </a>
        <div
          class="css-lew009"
        >
          <hr
            aria-hidden="true"
            class="css-15kf7hd"
            data-testid="divider"
          />
        </div>
        <span
          class="css-d9hjcx"
        >
          4 min read
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
